fix #16: correcting code base from errors